<resources>
    <string name="app_name">Todo App</string>
    <string name="tag">Let\'s join us and \n Enjoy this app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_in">LOGIN IN</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have an Account? Sign Up</string>
    <string name="todo_app">Todo App</string>
    <string name="username">Username</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account_sign_in">Already Have an Account? Sign in</string>
</resources>
